--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/federicomaffei/savely",
   "dependencies": {
+    "bell": "^2.2.0",
     "hapi": "^8.2.0",
     "hapi-auth-cookie": "^2.0.0",
     "jade": "^1.9.2",
