--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jade": "^1.9.2",
     "joi": "^5.1.0",
     "mongoose": "^3.8.24",
+    "mongoose-currency": "0.0.4",
     "passport-local-mongoose": "^1.0.0"
   }
 }
