--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon -e js,jade app.js",
-    "test": "mocha"
+    "test": "mocha --reporter spec --timeout 10s --recursive"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,12 @@
   "homepage": "https://github.com/federicomaffei/savely",
   "dependencies": {
     "bell": "^2.2.0",
+    "expect.js": "^0.3.1",
     "hapi": "^8.2.0",
     "hapi-auth-cookie": "^2.0.0",
     "jade": "^1.9.2",
     "joi": "^5.1.0",
     "mongoose": "^3.8.24",
-    "mongoose-currency": "0.0.4",
     "passport-local-mongoose": "^1.0.0"
   }
 }
